--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 body {
-    font-family: 'Special Elite' ;
-    padding:  20px 80px;
+  font-family: "Special Elite";
+  padding: 20px 80px;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
