--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -1,11 +1,10 @@
-.collection-preview {
+.collection-page {
   display: flex;
   flex-direction: column;
-  margin-bottom: 30px;
 
   .title {
-    font-size: 28px;
-    margin-bottom: 25px;
+    font-size: 38px;
+    margin: 0 auto 30px;
   }
 
   .items {
